--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,3 +8,6 @@ build: false
 
 test_script:
   - ps: . .\Tests\appveyor.pester.ps1 -Test -Finalize
+  
+on_finish:
+  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
