--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,12 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+#VSCode Internal Files
+.vscode
+
+#Internal Files
+Public/Get-TraverseTemplate.txt
+
 # =========================
 # Operating System Files
 # =========================
@@ -42,5 +48,4 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
-#Internal Files
-Public/Get-TraverseTemplate.txt
+
