Appveyor CI/CD Revamp Initial Test

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,5 @@
 # See http://www.appveyor.com/docs/appveyor-yml for many more options
+version: {build}-{branch}
 
 #Publish to PowerShell Gallery with this key
 environment:
