Add Powershell Module Deploy Step

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,3 +19,6 @@ build: false
 #Kick off the CI/CD pipeline
 test_script:
   - ps: . .\build.ps1
+
+deploy_script:
+  - ps: . .\CI\AppVeyorDeploy.ps1
