--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,6 +20,7 @@ build: false
 test_script:
   - ps: . .\build.ps1
 
-deploy:
-  deploy_script:
+deploy: true
+
+deploy_script:
     - ps: . .\CI\AppVeyorDeploy.ps1
