--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,13 +1,22 @@
 {
     "version": "0.2.0",
     "configurations": [
+
         {
-            "name": "PowerShell",
             "type": "PowerShell",
             "request": "launch",
-            "program": "${file}",
+            "name": "PowerShell (current file)",
+            "script": "${file}",
             "args": [],
             "cwd": "${file}"
+        },
+        {
+            "type": "PowerShell",
+            "request": "launch",
+            "name": "PowerShell (StartDebug)",
+            "script": "${workspaceRoot}/StartDebug.ps1",
+            "args": [],
+            "cwd": "${workspaceRoot}"
         }
     ]
 }
