Rewrite Build Strategy Using PSDeploy

--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,9 @@ $RECYCLE.BIN/
 #Internal Files
 Public/Get-TraverseTemplate.txt
 
-#Generated Releases
+#Generated Releases/Builds
 Release
+BuildOutput
 
 # =========================
 # Operating System Files
