--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,14 +16,13 @@ skip_commits:
 
 #Kick off the CI/CD pipeline. We do test and build in the same script
 #To be portable to non-Appveyor builds
+#We run it at the test step so that we can upload test results back to the system. 
 build: false
 test_script:
-  - ps: . .\Invoke-Build.ps1
+  - ps: .\Invoke-Build.ps1 -verbose
 
-deploy: true
-
-deploy_script:
-    - ps: . .\CI\AppVeyorDeploy.ps1
+deploy: false
 
 on_finish:
-  - ps: if ($env:APPVEYOR_REPO_COMMIT_MESSAGE -match 'TestDeploy') {$blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))}
+#If "AppveyorRDPDebug" is in the commit message, open an RDP session to investigate after build.
+  - ps: if ($env:APPVEYOR_REPO_COMMIT_MESSAGE -match 'AppveyorRDPDebug') {$blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))}
