--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,5 @@
 # See http://www.appveyor.com/docs/appveyor-yml for many more options
-version: '{branch}-{build}'
+version: '{build}-{branch}'
 
 #Publish to PowerShell Gallery with this key
 environment:
